--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -11,38 +11,20 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+    <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | QR code component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .box1 {
-        width: 1440px;
-        height: 960px;
-        margin: 0 auto;
-        background-color: hsl(212, 45%, 89%);
-      }
-      .container {
-        display: flex;
-        margin: auto;
-        width: 320px;
-        height: 499px;
-        background-color: hsl(0, 0%, 100%);
-
-      }
-      .picture {
-        
-        width: 100%;
-        height: 100%;
-        border-radius: 20px;;
-      }
-    </style>
   </head>
   <body>
-    <div class="box1">
     <div class="container">
-      <div class="picture">
-        <img src="images/image-qr-code.png" alt="image-qr-code.png">
+      <div class="card">
+        <img src="./images/image-qr-code.png" alt="qr-code image" />
+        <div class="text">
+          <h2>Improve your front-end skills by building projects</h2>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
     </div>
   </body>
