搭建主体框架

--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -31,18 +31,18 @@
       <div class="blog-container">
         <img src="./assets/images/illustration-article.svg" alt="" />
       </div>
-      <p class="blog-category"></p>
-      <p class="blog-meta"></p>
-      <h1 class="blog-titlr"></h1>
-      <p class="blog-exerpt"></p>
+      <p class="blog-category">Learning</p>
+      <p class="blog-meta">Published 21 Dec 2023</p>
+      <h1 class="blog-title">HTML & CSS foundations</h1>
+      <p class="blog-exerpt">
+        These languages are the backbone of every website, defining structure,
+        content, and presentation.
+      </p>
       <div class="authordata">
         <img src="assets/images/image-avatar.webp" alt="author-image" />
-        <p class="author-name"></p>
+        <p class="author-name">Greg Hooper</p>
       </div>
     </main>
-    Learning Published 21 Dec 2023 HTML & CSS foundations These languages are
-    the backbone of every website, defining structure, content, and
-    presentation. Greg Hooper
 
     <div class="attribution">
       Challenge by
